# autoconf-demo

./: README.md
demo-01/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan  hello
demo-01/.deps/: hello-hello.Po
demo-01/autom4te.cache/: output.1  traces.0  traces.1
demo-01/include/: pr.h
demo-01/src/: hello.c
demo-02/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan
demo-02/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
demo-02/doc/: README.md
demo-02/src/ModuleA/apple/core/: Makefile  Makefile.am  Makefile.in  test
demo-02/src/ModuleA/apple/core/.deps/: test.Po
demo-02/src/ModuleA/apple/shell/: Makefile  Makefile.am  Makefile.in
demo-02/src/ModuleA/apple/shell/.deps/: apple.Po
demo-02/src/lib/: Makefile  Makefile.am  Makefile.in
demo-02/src/lib/.deps/: swap.Po
